--- a/src/styles/components/Dropdown.css
+++ b/src/styles/components/Dropdown.css
@@ -1,9 +1,13 @@
-.sidebar {
-    padding: 20px;
-    background-color: #f2f2f2;
-    width: 300px;
+.dropdown {
+    color: blue;
+    width: 100px;
 }
 
-input[type='checkbox'] {
-    margin-right: 10px;
+/* .css-13cymwt-control {
+    height: 100%;
+} */
+/* */
+
+.css-qbdosj-Input {
+    height: 100%;
 }
