--- a/src/styles/components/Button.css
+++ b/src/styles/components/Button.css
@@ -5,7 +5,7 @@
 .btn {
     padding: 1rem;
     background-color: white;
-    color: black;
+    color: #333;
     border: none;
     cursor: pointer;
     font-size: 1rem;
