--- a/src/styles/components/Navbar.css
+++ b/src/styles/components/Navbar.css
@@ -6,6 +6,8 @@
     background-color: #333;
     color: #fff;
     padding: 0.5rem 10rem;
+    position: fixed;
+    width: 100%;
 }
 
 .navbar-brand {
@@ -28,6 +30,7 @@
     content: url('../../assets/icons/alphabet-sort.svg');
     width: 50px;
     height: 50px;
+    margin-left: 0.5rem;
 }
 .form {
     display: flex;
@@ -36,11 +39,14 @@
 .form input {
     padding: 1rem 0.1rem 1rem 4rem;
     font-size: 1rem;
+    font-weight: bold;
+    text-transform: capitalize;
     border: none;
     margin-right: 0.5rem;
     border-radius: 3rem;
     outline: none;
     letter-spacing: 0.05rem;
+    color: #333;
 }
 
 .form-img {
