--- a/src/styles/components/Navbar.css
+++ b/src/styles/components/Navbar.css
@@ -1,3 +1,5 @@
+@import '../fonts.css';
+
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -47,6 +49,7 @@
     outline: none;
     letter-spacing: 0.05rem;
     color: #333;
+    font-family: 'Sansita', sans-serif;
 }
 
 .form-img {
