--- a/src/styles/components/Pokemon.css
+++ b/src/styles/components/Pokemon.css
@@ -37,6 +37,7 @@
     text-transform: capitalize;
     font-family: 'Sansita', sans-serif;
     letter-spacing: 0.07rem;
+    margin-bottom: 2rem;
     text-shadow: #fff 0px 0px 2px, rgb(208 177 177) 0px 1px 2px,
         #fff 0px 0px 15px, 0px 10px 15px rgb(64 59 60 / 0%);
     text-align: center;
