--- a/src/styles/components/Info.css
+++ b/src/styles/components/Info.css
@@ -3,13 +3,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(100vh - 80px);
 }
 
 .info {
     background-color: white;
     color: #333;
-    font-size: 5rem;
+    /*     font-size: 5rem; */
     font-family: 'Sansita', sans-serif;
     text-align: center;
     /*  background-color: rgb(173, 167, 167); */
