--- a/src/styles/components/Info.css
+++ b/src/styles/components/Info.css
@@ -1,5 +1,5 @@
 @import '../fonts.css';
-.info-main {
+.info-container {
     display: flex;
     justify-content: center;
     align-items: center;
