--- a/src/styles/components/Button.css
+++ b/src/styles/components/Button.css
@@ -3,22 +3,26 @@
 .btn-container {
     text-align: center;
 }
-
-.btn {
-    padding: 1rem;
-    background-color: white;
-    color: #333;
+.btn-base {
     border: none;
     cursor: pointer;
-    font-size: 1rem;
     font-weight: bold;
     letter-spacing: 0.05rem;
     border-radius: 3rem;
     font-family: 'Sansita', sans-serif;
 }
-
-.btn:hover,
-.btn:focus {
-    cursor: pointer;
-    zoom: 1fr;
+.btn-navbar {
+    padding: 1rem;
+    background-color: white;
+    color: #333;
+    font-size: 1rem;
+}
+.btn-form {
+    color: white;
+    background-color: #333;
+    font-size: 1rem;
+    padding: 0.7rem 1rem;
+}
+.btn-base:hover {
+    transform: scale(1.05);
 }
