--- a/src/styles/components/Navbar.css
+++ b/src/styles/components/Navbar.css
@@ -25,7 +25,6 @@
 }
 .navbar-sort {
     display: flex;
-    align-items: center;
 }
 .sort-container {
     display: flex;
@@ -41,6 +40,7 @@
 .navbar-search {
     display: flex;
     align-items: center;
+    position: relative;
 }
 .navbar input {
     padding: 1rem 0.1rem 1rem 4rem;
@@ -63,7 +63,7 @@
     padding: 1rem;
     width: 64px;
     height: 64px;
-    position: absolute;
     cursor: pointer;
     text-align: center;
+    position: absolute;
 }
