--- a/src/styles/components/Pokemon.css
+++ b/src/styles/components/Pokemon.css
@@ -3,7 +3,7 @@
 }
 .pokemon {
     width: 300px;
-    height: 500px;
+    height: auto;
     background-color: white;
     border: 5px solid black;
     border-radius: 2rem;
