--- a/src/styles/components/Dropdown.css
+++ b/src/styles/components/Dropdown.css
@@ -1,12 +1,33 @@
 @import '../fonts.css';
 
+.dropdown-container {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    margin: 1.5rem 0;
+    width: 200px;
+    background-color: #333;
+    border-radius: 1rem;
+    padding: 0.5rem;
+    -webkit-box-shadow: 0px 0px 11px 3px rgba(247, 242, 242, 0.76);
+    -moz-box-shadow: 0px 0px 11px 3px rgba(247, 242, 242, 0.76);
+    box-shadow: 0px 0px 11px 3px rgba(247, 242, 242, 0.76);
+}
 .dropdown {
     margin-left: 0.5rem;
     color: #333;
     width: 100px;
     font-family: 'Sansita', sans-serif;
 }
-
-.css-qbdosj-Input {
+.dropdown-sort {
+    content: url('../../assets/icons/alphabet-sort.svg');
+    width: 40px;
+    height: 40px;
+    margin-left: 1rem;
+}
+.dropdown-sort:hover {
+    cursor: pointer;
+}
+.contain .css-qbdosj-Input {
     height: 100%;
 }
