--- a/src/styles/components/Info.css
+++ b/src/styles/components/Info.css
@@ -3,18 +3,24 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 1.5rem;
 }
 
 .info {
     background-color: white;
     color: #333;
-    /*     font-size: 5rem; */
     font-family: 'Sansita', sans-serif;
     text-align: center;
-    /*  background-color: rgb(173, 167, 167); */
     border-radius: 10px;
-    padding: 40px;
+    padding: 1rem;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
     max-width: 500px;
     margin: 0 auto;
+    font-size: 1.5rem;
+}
+@media (max-width: 448) {
+    .info {
+        font-size: 1rem;
+        background-color: rebeccapurple;
+    }
 }
