--- a/src/styles/components/Navbar.css
+++ b/src/styles/components/Navbar.css
@@ -1,16 +1,14 @@
 @import '../fonts.css';
-
+nav {
+    background-color: #333;
+    padding: 1rem 0;
+    width: 100%;
+}
 .navbar {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 0.5rem 1rem;
-    background-color: #333;
-    color: #fff;
-    padding: 0.5rem 10rem;
-    width: 100%;
-    z-index: 5;
 }
+
 .scrolled {
     position: fixed;
     top: 0;
@@ -23,11 +21,11 @@
     content: url('../../assets/icons/logo.svg');
     width: 64px;
 }
-.navbar-sort {
+.navbar-wrapper {
     display: flex;
     align-items: center;
 }
-.sort-container {
+.navbar-sort {
     display: flex;
     align-items: center;
 }
@@ -38,12 +36,9 @@
     height: 50px;
     margin-left: 0.5rem;
 }
-.navbar-search {
-    display: flex;
-    align-items: center;
-}
+
 .navbar input {
-    padding: 1rem 0.1rem 1rem 4rem;
+    padding: 1rem 0.1rem 1rem 0.1rem;
     font-size: 1rem;
     font-weight: bold;
     text-transform: capitalize;
@@ -54,16 +49,17 @@
     letter-spacing: 0.05rem;
     color: #333;
     font-family: 'Sansita', sans-serif;
+    width: 100%;
 }
 .navbar input::placeholder {
     color: #333;
 }
 
-.navbar-img {
-    padding: 1rem;
-    width: 64px;
-    height: 64px;
-    position: absolute;
+.wrapper-img {
+    margin: 0;
+    padding: 0;
+    width: 32px;
+    height: 32px;
     cursor: pointer;
     text-align: center;
 }
@@ -71,17 +67,37 @@
 .navbar-search {
     display: flex;
     align-items: center;
+    padding: 0.5rem;
+    background-color: #f5f5f5;
+    border-radius: 20px;
+    max-width: 200px;
 }
-.navbar-favourites {
+
+.navbar-search input {
+    padding: 0.5rem;
+    font-size: 1rem;
+    font-weight: bold;
+    text-transform: capitalize;
+    border: none;
+    margin-right: 0.5rem;
+    border-radius: 3rem;
+    outline: none;
+    letter-spacing: 0.05rem;
+    color: #333;
+    font-family: 'Sansita', sans-serif;
+    background-color: transparent;
+    flex: 1;
+}
+.wrapper-favourites {
     position: relative;
     display: flex;
     align-items: center;
     cursor: pointer;
 }
-.navbar-favourites img {
+.wrapper-favourites img {
     width: 50px;
 }
-.navbar-favourites-count {
+.favourites-count {
     position: absolute;
     bottom: 0;
     right: 0;
@@ -92,4 +108,10 @@
     font-size: 0.8rem;
     font-weight: bold;
     margin: 0;
+}
+.wrapper-buttons {
+    display: flex;
+    margin-left: 0.45rem;
+}
+@media (max-width: 767px) {
 }
