--- a/src/styles/components/Pokemons.css
+++ b/src/styles/components/Pokemons.css
@@ -1,10 +1,22 @@
 .pokemon-container {
     display: grid;
-    /*   grid-template-columns: auto auto auto auto; */
+    /*   grid-template-columns: auto auto auto; */
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 100px;
-    padding: 4rem 10rem;
-
     animation: 5s infinite;
-    margin: 0 auto;
+    justify-content: center; /* horizontally center the child elements */
+    align-items: center;
+    justify-content: space-between;
+}
+@media (max-width: 992px) {
+    .pokemon-container {
+        grid-template-columns: auto auto;
+        justify-content: space-between;
+    }
+}
+@media (max-width: 768px) {
+    .pokemon-container {
+        grid-template-columns: auto;
+        justify-content: center;
+    }
 }
